--- a/index.html
+++ b/index.html
@@ -119,12 +119,11 @@
                     </a>
                     <div class="text-description">
                         <h3>le canard huppé</h3>
-                        Produced by amateur journalists, the newspaper allows anyone who wants to try their hand at
-                        writing
-                        articles, creating videos, recording podcasts and any other medium. The subjects of publication
-                        mainly concern environmental issues in the broadest sense (political, economic, technical,
-                        societal,
-                        psychological, spiritual, etc.).
+                        Le Canard Huppé is a publication crafted by amateur journalists, offering individuals the chance
+                        to cultivate their talents in areas such as article writing, video production, podcast
+                        recording, and a multitude of other media forms. The core focus of this newspaper is an
+                        extensive array of environmental subjects, including politics, economics, technology, society,
+                        psychology, spirituality, and beyond.
                     </div>
                 </div>
                 <!-- Coaching in sustainability -->
@@ -135,8 +134,8 @@
                     </a>
                     <div class="text-description">
                         <h3>Coaching in sustainability</h3>
-                        A team of coaches to support students in acquiring the skills and networks they need to work for
-                        sustainability during their studies or once they graduate.
+                        A team of coaches available to support students in acquiring the skills and networks necessary
+                        to work in the field of sustainability during their studies or after graduation."
                     </div>
                 </div>
                 <!-- EPFL Courses -->
@@ -160,9 +159,8 @@
                     <div class="text-description">
                         <h3>Fresque du climat</h3>
                         The fresks are fun, collaborative and creative 3 hours workshops meant to raise awareness about
-                        environmental issues, and based on collective intelligence. the workshop available at the
-                        Climate
-                        Fresk, Biodiversity Fresks and Digital Collage.
+                        environmental issues, and based on collective intelligence. the workshop available are the
+                        Climate Fresk, Biodiversity Fresks and Digital Collage.
                     </div>
                 </div>
             </div>
@@ -239,12 +237,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Meubléco</h3>
-                        If you move or want to sell your furniture, Meubléco offers you to come and buy and recover your
-                        furniture in good condition on June 17, June 24 and July 1, 2023. These pieces of furniture will
-                        be
-                        resold at a low price to other students during our furniture fair organized for Marcheco which
-                        will
-                        take place in September 2023 at EPFL!
+                        Meubléco is a project run by the Unipoly association, aiming to promote eco-friendly practices
+                        and sustainability at the Unil-EPFL campus. It started in the fall of 2020 with a simple goal:
+                        encouraging the reuse of furniture. Meubléco allows students to buy and sell second-hand
+                        furniture at budget-friendly prices, making sustainable choices accessible to the Unil-EPFL
+                        community.
                     </div>
                 </div>
                 <!-- Fix n’Replace (Repair café) -->
@@ -269,7 +266,10 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Vélo</h3>
-                        Point Vélo is a place where EPFL community members can buy new and used bikes and cycling gear at reduced prices, get affordable bike repairs, and attend free bike mechanics classes. These products and services are available only to EPFL community members. You will be asked to present your Campiro card.
+                        Point Vélo is a place where EPFL community members can buy new and used bikes and cycling gear
+                        at reduced prices, get affordable bike repairs, and attend free bike mechanics classes. These
+                        products and services are available only to EPFL community members. You will be asked to present
+                        your Campiro card.
                     </div>
                 </div>
                 <!-- Point Smart (Cellphones) -->
@@ -281,7 +281,8 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Smart (Cellphones)</h3>
-                        Point Smart extends the life of mobile phones by offering a at cost price repair service at the Poseidon premises on the Ecublens campus. This service is available daily from noon to 2 p.m.
+                        Point Smart extends the life of mobile phones by offering a at cost price repair service at the
+                        Poseidon premises on the Ecublens campus. This service is available daily from noon to 2 p.m.
                     </div>
                 </div>
                 <!-- Marché EPFL -->
@@ -363,7 +364,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Polyquity</h3>
-                        Polyquity is a commission of AGEPoly, the student association of EPFL. Its main objectives are to provide open discussions on issues of discrimination and to raise awareness on campus about existing discriminations and ways to combat them. To achieve this, it organizes coffee discussions, workshops, and is responsible for the Instagram account "payetonepfl," which exposes and highlights discriminatory situations experienced on the EPFL campus, as well as numerous other projects to make everyday life at EPFL sustainable and inclusive for everyone.
+                        Polyquity is a commission of AGEPoly, the student association of EPFL. Its main objectives are
+                        to provide open discussions on issues of discrimination and to raise awareness on campus about
+                        existing discriminations and ways to combat them. To achieve this, it organizes coffee
+                        discussions, workshops, and is responsible for the Instagram account "payetonepfl," which
+                        exposes and highlights discriminatory situations experienced on the EPFL campus, as well as
+                        numerous other projects to make everyday life at EPFL sustainable and inclusive for everyone.
                     </div>
                 </div>
                 <!-- PlanQueer -->
@@ -390,7 +396,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Queermanence</h3>
-                        Queermanence aims to be a caring and confidential listening space. This place exists to give an initial warm support but also to help to find a staff (health, social or legal) trained and adapted to your needs. Queermanence's objective is to offer support during challenging times, such as instances of physical or verbal violence, harassment, and gender discrimination, while also providing guidance on gender, sexual, and intimate questions.
+                        Queermanence aims to be a caring and confidential listening space. This place exists to give an
+                        initial warm support but also to help to find a staff (health, social or legal) trained and
+                        adapted to your needs. Queermanence's objective is to offer support during challenging times,
+                        such as instances of physical or verbal violence, harassment, and gender discrimination, while
+                        also providing guidance on gender, sexual, and intimate questions.
                     </div>
                 </div>
                 <!-- Zero Emission Group -->
@@ -400,7 +410,8 @@
                     </a>
                     <div class="text-description">
                         <h3>Zero Emission Group</h3>
-                        Zero Emission Group is a student led initiative aimed at raising awareness and working with stakeholders on and beyond the EPFL campus in order to catalyze sustainable action. 🌍
+                        Zero Emission Group is a student led initiative aimed at raising awareness and working with
+                        stakeholders on and beyond the EPFL campus in order to catalyze sustainable action. 🌍
                     </div>
                 </div>
                 <!-- La Convergence -->
@@ -439,7 +450,10 @@
                     </a>
                     <div class="text-description">
                         <h3>Ingénieur.es Engagé.es</h3>
-                        The Ingénieurs Engagés (IE) movement aims to bring together all those who question the role and place of engineers in society. It mainly gathers students and engineers who want to give meaning to their (future) profession, aware of the social and environmental issues that our society must face today.
+                        The Ingénieurs Engagés (IE) movement aims to bring together all those who question the role and
+                        place of engineers in society. It mainly gathers students and engineers who want to give meaning
+                        to their (future) profession, aware of the social and environmental issues that our society must
+                        face today.
                     </div>
                 </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
@@ -449,7 +463,14 @@
                     </a>
                     <div class="text-description">
                         <h3>Amnesty des Hautes Ecoles Lausannoises</h3>
-                        The association Amnesty HEL is dedicated to promoting the defense of human rights on Lausanne campuses by raising student awareness of socio-political and environmental issues. Its activities and actions are organized into five sections: Women's Rights, Environment, International Political News, LGBTQ+, and Asylum and Migration. Within these sections, a wide range of events and actions take place, including conferences, film screenings, workshops, and concrete initiatives. These concrete actions involve fighting against menstrual precariousness on campus, organizing sustainability rallies, setting up a podcast, and conducting waste collections. All of these activities are carried out in a caring and inclusive manner.
+                        The association Amnesty HEL is dedicated to promoting the defense of human rights on Lausanne
+                        campuses by raising student awareness of socio-political and environmental issues. Its
+                        activities and actions are organized into five sections: Women's Rights, Environment,
+                        International Political News, LGBTQ+, and Asylum and Migration. Within these sections, a wide
+                        range of events and actions take place, including conferences, film screenings, workshops, and
+                        concrete initiatives. These concrete actions involve fighting against menstrual precariousness
+                        on campus, organizing sustainability rallies, setting up a podcast, and conducting waste
+                        collections. All of these activities are carried out in a caring and inclusive manner.
                     </div>
                 </div>
                 <!-- Drag Lab -->
@@ -470,7 +491,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Ferme de Bassenges</h3>
-                        Ferme de Bassenges is a farm founded in 2020 by a group of young farmers and engineers. Located near EPFL and the SwissTech Convention Center, its primary mission is to engage in organic, biodynamic, and low-tech agriculture.
+                        Ferme de Bassenges is a farm founded in 2020 by a group of young farmers and engineers. Located
+                        near EPFL and the SwissTech Convention Center, its primary mission is to engage in organic,
+                        biodynamic, and low-tech agriculture.
                     </div>
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
@@ -480,7 +503,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Association des étudiant·es végan·es et animalistes</h3>
-                        EVA is Unipoly's hub representing vegan students and animal rights supporters. It encourages an ethical and animal-friendly lifestyle, and offers the possibility to feed and live as independently as possible from animal exploitation by significantly increasing the vegan offer in the catering places of university campuses. The EVA also wishes to bring together vegan students and people interested in veganism and animalism in a community focused on discussion and offer support and advice to students and collaborators wishing to adopt a vegan lifestyle.
+                        EVA is Unipoly's hub representing vegan students and animal rights supporters. It encourages an
+                        ethical and animal-friendly lifestyle, and offers the possibility to feed and live as
+                        independently as possible from animal exploitation by significantly increasing the vegan offer
+                        in the catering places of university campuses. The EVA also wishes to bring together vegan
+                        students and people interested in veganism and animalism in a community focused on discussion
+                        and offer support and advice to students and collaborators wishing to adopt a vegan lifestyle.
                     </div>
                 </div>
             </div>
