--- a/index_fr.html
+++ b/index_fr.html
@@ -119,11 +119,12 @@
                     </a>
                     <div class="text-description">
                         <h3>le canard huppé</h3>
-                        Produit par des amateurices de journalisme, le journal permet, à toute personne qui le souhaite
-                        de s’essayer à la rédaction d’article, à la création de vidéos, à l’enregistrement de podcasts
-                        et tout autre medium. Les sujets de publication portent principalement sur les thématiques
-                        environnementales au sens large (politique, économique, technique, sociétal, psychologique,
-                        spirituelle, etc).
+                        Le Canard Huppé est une publication réalisée par des journalistes amateurs, offrant aux
+                        individus l'opportunité de cultiver leurs talents dans des domaines tels que la rédaction
+                        d'articles, la production vidéo, l'enregistrement de podcasts, et une multitude d'autres formes
+                        de médias. Le cœur de cet journal se concentre sur une vaste gamme de sujets environnementaux,
+                        incluant la politique, l'économie, la technologie, la société, la psychologie, la spiritualité,
+                        et bien plus encore.
                     </div>
                 </div>
                 <!-- Coaching in sustainability -->
@@ -135,8 +136,8 @@
                     <div class="text-description">
                         <h3>Coaching in sustainability</h3>
                         Une équipe de coachs à disposition pour soutenir les étudiant·es dans l'acquisition des
-                        compétences et réseaux nécessaires à travailler au service de la durabilité durant leurs études
-                        ou une fois diplômé·es.
+                        compétences et réseaux nécessaires pour travailler au service de la durabilité durant leurs
+                        études ou une fois diplômé·es.
                     </div>
                 </div>
                 <!-- EPFL Courses -->
@@ -235,10 +236,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Meubléco</h3>
-                        Si tu déménages ou que tu souhaites vendre tes meubles, Meubléco te propose de venir racheter et
-                        récupérer tes meubles en bon état les 17 juin, 24 juin et 1er juillet 2023. Ces meubles seront
-                        revendus à bas prix à d’autres étudiants lors de notre foire aux meubles organisée pour Marcheco
-                        qui aura lieu en septembre 2023 à l’EPFL !
+                        Meubléco est un projet mené par l'association Unipoly, visant à promouvoir des pratiques
+                        respectueuses de l'environnement et le développement durable sur le campus de l'Unil-EPFL. Il a
+                        débuté à l'automne 2020 avec un objectif simple : encourager la réutilisation des meubles.
+                        Meubléco permet aux étudiants d'acheter et de vendre des meubles d'occasion à des prix
+                        abordables, rendant ainsi les choix durables accessibles à la communauté de l'Unil-EPFL.
                     </div>
                 </div>
                 <!-- Fix n’Replace (Repair café) -->
@@ -263,7 +265,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Vélo</h3>
-                        Point Vélo est un lieu où les membres de la communauté de l'EPFL peuvent acheter des vélos neufs et d'occasion ainsi que des équipements cyclistes à des prix réduits, bénéficier de réparations de vélo abordables et participer à des cours de mécanique vélo gratuits. Ces produits et services sont disponibles uniquement pour les membres de la communauté de l'EPFL sur présentation de la carte CAMIPRO.
+                        Point Vélo est un lieu où les membres de la communauté de l'EPFL peuvent acheter des vélos neufs
+                        et d'occasion ainsi que des équipements cyclistes à des prix réduits, bénéficier de réparations
+                        de vélo abordables et participer à des cours de mécanique vélo gratuits. Ces produits et
+                        services sont disponibles uniquement pour les membres de la communauté de l'EPFL sur
+                        présentation de la carte CAMIPRO.
                     </div>
                 </div>
                 <!-- Point Smart (Cellphones) -->
@@ -275,7 +281,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Point Smart (Cellphones)</h3>
-                        Point Smart prolonge la durée de vie des téléphones mobiles en proposant un service de réparation au prix coûtant sur le site de Poseidon, sur le campus d'Ecublens. Ce service est disponible tous les jours de midi à 14 heures.
+                        Point Smart prolonge la durée de vie des téléphones mobiles en proposant un service de
+                        réparation au prix coûtant sur le site de Poseidon, sur le campus d'Ecublens. Ce service est
+                        disponible tous les jours de midi à 14 heures.
                     </div>
                 </div>
                 <!-- Marché EPFL -->
@@ -354,7 +362,13 @@
                     </a>
                     <div class="text-description">
                         <h3>Polyquity</h3>
-                        Polyquity est une commission de l’AGEPoly, l’association des étudiant·x·e·s de l’EPFL. Ses objectifs principaux sont d’offrir des discussions ouvertes sur les questions de discrimination, ainsi que de sensibiliser le campus sur toutes les discriminations déjà existantes et aux moyens de les combattre. Elle organise pour cela des cafés-discussions, des ateliers, et est à l’origine du compte instagram payetonepfl, qui dénonce et rend visible les situations discriminatoires vécues sur le campus de l’EPFL, ainsi que de nombreux autres projets pour rendre le quotidien à l’EPFL durable et viable pour tou·x·te·s.
+                        Polyquity est une commission de l’AGEPoly, l’association des étudiant·x·e·s de l’EPFL. Ses
+                        objectifs principaux sont d’offrir des discussions ouvertes sur les questions de discrimination,
+                        ainsi que de sensibiliser le campus sur toutes les discriminations déjà existantes et aux moyens
+                        de les combattre. Elle organise pour cela des cafés-discussions, des ateliers, et est à
+                        l’origine du compte instagram payetonepfl, qui dénonce et rend visible les situations
+                        discriminatoires vécues sur le campus de l’EPFL, ainsi que de nombreux autres projets pour
+                        rendre le quotidien à l’EPFL durable et viable pour tou·x·te·s.
                     </div>
                 </div>
                 <!-- PlanQueer -->
@@ -377,7 +391,12 @@
                     </a>
                     <div class="text-description">
                         <h3>Queermanence</h3>
-                        Queermanence se veut un espace d'écoute bienveillant et confidentiel. Ce lieu existe pour apporter un premier soutien chaleureux mais aussi pour aider à trouver un personnel (sanitaire, social ou juridique) formé et adapté à vos besoins, afin de vous soutenir dans les moments difficiles tels que : La violence physique ou verbale, le harcèlement, la discrimination de genre mais aussi de vous accompagner dans vos questionnements sur le genre, la sexualité et l'intimité.
+                        Queermanence se veut un espace d'écoute bienveillant et confidentiel. Ce lieu existe pour
+                        apporter un premier soutien chaleureux mais aussi pour aider à trouver un personnel (sanitaire,
+                        social ou juridique) formé et adapté à vos besoins, afin de vous soutenir dans les moments
+                        difficiles tels que : La violence physique ou verbale, le harcèlement, la discrimination de
+                        genre mais aussi de vous accompagner dans vos questionnements sur le genre, la sexualité et
+                        l'intimité.
                     </div>
                 </div>
                 <!-- Zero Emission Group -->
@@ -387,7 +406,8 @@
                     </a>
                     <div class="text-description">
                         <h3>Zero Emission Group</h3>
-                        Le groupe Zéro Émission est une initiative étudiante visant à sensibiliser et à collaborer avec les acteurs de l'EPFL sur et au-delà du campus afin de catalyser des actions durables. 🌍
+                        Le groupe Zéro Émission est une initiative étudiante visant à sensibiliser et à collaborer avec
+                        les acteurs de l'EPFL sur et au-delà du campus afin de catalyser des actions durables. 🌍
                     </div>
                 </div>
                 <!-- La Convergence -->
@@ -424,7 +444,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Ingénieur.es Engagé.es</h3>
-                        Le mouvement Ingénieurs Engagés (IE) a pour but de rassembler toutes les personnes se questionnant sur le rôle et la place des ingénieur·e·s dans la société. Il réunit principalement des étudiants et ingénieurs voulant donner du sens à leur (futur) métier, conscients des problématiques sociales et environnementales auxquelles notre société doit aujourd’hui faire face.
+                        Le mouvement Ingénieurs Engagés (IE) a pour but de rassembler toutes les personnes se
+                        questionnant sur le rôle et la place des ingénieur·e·s dans la société. Il réunit principalement
+                        des étudiants et ingénieurs voulant donner du sens à leur (futur) métier, conscients des
+                        problématiques sociales et environnementales auxquelles notre société doit aujourd’hui faire
+                        face.
                     </div>
                 </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
@@ -434,7 +458,15 @@
                     </a>
                     <div class="text-description">
                         <h3>Amnesty des Hautes Ecoles Lausannoises</h3>
-                        L'association Amnesty HEL est dédiée à la promotion de la défense des droits de l'homme sur les campus de Lausanne en sensibilisant les étudiants aux questions socio-politiques et environnementales. Ses activités et actions sont organisées en cinq sections : Droits des femmes, Environnement, Actualités politiques internationales, LGBTQ+ et Asile et Migration. Au sein de ces sections, une grande variété d'événements et d'actions ont lieu, notamment des conférences, des projections de films, des ateliers et des initiatives concrètes. Ces actions concrètes comprennent la lutte contre la précarité menstruelle sur le campus, l'organisation de rassemblements pour la durabilité, la création d'un podcast et la réalisation de collectes de déchets. Toutes ces activités sont menées de manière bienveillante et inclusive.
+                        L'association Amnesty HEL est dédiée à la promotion de la défense des droits de l'homme sur les
+                        campus de Lausanne en sensibilisant les étudiants aux questions socio-politiques et
+                        environnementales. Ses activités et actions sont organisées en cinq sections : Droits des
+                        femmes, Environnement, Actualités politiques internationales, LGBTQ+ et Asile et Migration. Au
+                        sein de ces sections, une grande variété d'événements et d'actions ont lieu, notamment des
+                        conférences, des projections de films, des ateliers et des initiatives concrètes. Ces actions
+                        concrètes comprennent la lutte contre la précarité menstruelle sur le campus, l'organisation de
+                        rassemblements pour la durabilité, la création d'un podcast et la réalisation de collectes de
+                        déchets. Toutes ces activités sont menées de manière bienveillante et inclusive.
                     </div>
                 </div>
                 <!-- Drag Lab -->
@@ -455,7 +487,9 @@
                     </a>
                     <div class="text-description">
                         <h3>Ferme de Bassenges</h3>
-                        La Ferme de Bassenges est une ferme fondée en 2020 par un groupe de jeunes agriculteurs et d'ingénieurs. Située à proximité de l'EPFL et du SwissTech Convention Center, sa principale mission est de se consacrer à l'agriculture biologique, biodynamique et low-tech.
+                        La Ferme de Bassenges est une ferme fondée en 2020 par un groupe de jeunes agriculteurs et
+                        d'ingénieurs. Située à proximité de l'EPFL et du SwissTech Convention Center, sa principale
+                        mission est de se consacrer à l'agriculture biologique, biodynamique et low-tech.
                     </div>
                 </div>
                 <!-- Association des étudiant·es végan·es et animalistes -->
@@ -465,7 +499,14 @@
                     </a>
                     <div class="text-description">
                         <h3>Association des étudiant·es végan·es et animalistes</h3>
-                        EVA est le pôle d'Unipoly représentant les étudiants véganes et animalistes. Il encourage un mode de vie éthique et respectueux des animaux, et offre la possibilité de se nourrir et de vivre aussi indépendamment que possible de l'exploitation animale en augmentant de manière significative l'offre végétalienne dans les lieux de restauration des campus universitaires. L’EVA souhaite également rassembler les étudiant·e·s véganes et personnes intéressées par le véganisme et l’animalisme au sein d’une communauté tournée vers la discussion ainsi qu’offrir support et conseils aux étudiant·e·s et collaborateur·rice·s souhaitant adopter un mode de vie végane.
+                        EVA est le pôle d'Unipoly représentant les étudiants véganes et animalistes. Il encourage un
+                        mode de vie éthique et respectueux des animaux, et offre la possibilité de se nourrir et de
+                        vivre aussi indépendamment que possible de l'exploitation animale en augmentant de manière
+                        significative l'offre végétalienne dans les lieux de restauration des campus universitaires.
+                        L’EVA souhaite également rassembler les étudiant·e·s véganes et personnes intéressées par le
+                        véganisme et l’animalisme au sein d’une communauté tournée vers la discussion ainsi qu’offrir
+                        support et conseils aux étudiant·e·s et collaborateur·rice·s souhaitant adopter un mode de vie
+                        végane.
                     </div>
                 </div>
             </div>
