--- a/index_fr.html
+++ b/index_fr.html
@@ -130,7 +130,7 @@
                 <!-- Coaching in sustainability -->
                 <div class="bubble smaller" id="CoachingSustainability">
                     <a href="https://people.epfl.ch/michka.melo">
-                        <img src="logo\Coaching sustainability.png" alt="Image">
+                        <img src="logo\Coaching sustainability_fr.png" alt="Image">
                         <!-- <span>Coaching in Sustainability</span> -->
                     </a>
                     <div class="text-description">
@@ -144,7 +144,7 @@
                 <div class="bubble smaller" id="EPFLCourses">
                     <a
                         href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-                        <img src="logo\EPFL courses.png" alt="Image">
+                        <img src="logo\EPFL courses_fr.png" alt="Image">
                         <!-- <span>EPFL</span>
                         <span>Courses</span> -->
                     </a>
@@ -663,7 +663,7 @@
                 <!-- Trust and Support Network (TSN) -->
                 <div class="bubble smaller" id="TrustandSupportNetworkTSN">
                     <a href="https://www.epfl.ch/campus/community/trust-and-support-network/">
-                        <img src="logo\Trust-support-network-epfl_fr.png" alt="Image">
+                        <img src="logo\Trust-support-network-epfl.png" alt="Image">
                         <!-- <span>TSN</span> -->
                     </a>
                     <div class="text-description">
