--- a/backup/index.html
+++ b/backup/index.html
@@ -11,59 +11,62 @@
 
 <body>
     <div class="container" id="intro">
-        <div class="banner">
-            <div class="title">
-                EPFL Sustainability Resources
-            </div>
-            <div class="lang">
-                <div class="dropdown toggle">
-                    <input id="t1" type="checkbox" unchecked>
-                    <label for="t1">language</label>
-                    <ul>
-                        <li><a href="index.html">English</a></li>
-                        <li><a href="index_fr.html">Francais</a></li>
-                    </ul>
+        <div class="upper_part">
+            <div class="banner">
+                <div class="title">
+                    EPFL Sustainability Resources
+                </div>
+                <div class="lang">
+                    <div class="dropdown toggle">
+                        <input id="t1" type="checkbox" unchecked>
+                        <label for="t1">language</label>
+                        <ul>
+                            <li><a href="index.html">English</a></li>
+                            <li><a href="index_fr.html">Francais</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="appetizer">
-            <div class="text">
-                <h1>Discover sustainability on your campus!</h>
-                    <p>There are many resources & staff available for students on EPFL campus regarding sustainability.
-                        This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a
-                        comprehensive
-                        list of these resources, and to make them easily accessible to all.
-                    </p>
-                    <p>To get in touch with the sustainability education team about this site or for other reasons,
-                        don’t
-                        hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
-                        more information!
-                    </p>
-            </div>
-            <div class="subbubble-container" id="subbubbles">
-                <div class="midcontainer" id="upper_subbubbles">
-                    <div class="sub-bubble" id="subbubble1">
-                        <img src="logo\Apprendre.png" alt="Image">
-                        <span>Inform Yourself</span>
-                    </div>
-                    <div class="sub-bubble" id="subbubble2">
-                        <img src="logo\Services.png" alt="Image">
-                        <span>Enjoy Services</span>
-                    </div>
-                    <div class="sub-bubble" id="subbubble3">
-                        <img src="logo\Community.png" alt="Image">
-                        <span>Take Action</span>
-                    </div>
+            <div class="appetizer">
+                <div class="text">
+                    <h1>Discover sustainability on your campus!</h>
+                        <p>There are many resources & staff available for students on EPFL campus regarding
+                            sustainability.
+                            This website, built by students <i>(Mehdi El Bouari & Ke Li, 2023)</i>, aims to provide a
+                            comprehensive
+                            list of these resources, and to make them easily accessible to all.
+                        </p>
+                        <p>To get in touch with the sustainability education team about this site or for other reasons,
+                            don’t
+                            hesitate to contact <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> for
+                            more information!
+                        </p>
                 </div>
-                <div class="midcontainer" id="lower_subbubbles">
-                    <div class="sub-bubble" id="subbubble4">
-                        <img src="logo\Startup.png" alt="Image">
-                        <span>Launch</span>
-                        <span>Your Project</span>
+                <div class="subbubble-container" id="subbubbles">
+                    <div class="midcontainer" id="upper_subbubbles">
+                        <div class="sub-bubble" id="subbubble1">
+                            <img src="logo\Apprendre.png" alt="Image">
+                            <span>Inform Yourself</span>
+                        </div>
+                        <div class="sub-bubble" id="subbubble2">
+                            <img src="logo\Services.png" alt="Image">
+                            <span>Enjoy Services</span>
+                        </div>
+                        <div class="sub-bubble" id="subbubble3">
+                            <img src="logo\Community.png" alt="Image">
+                            <span>Take Action</span>
+                        </div>
                     </div>
-                    <div class="sub-bubble" id="subbubble5">
-                        <img src="logo\Sain.png" alt="Image">
-                        <span>Take Care</span>
+                    <div class="midcontainer" id="lower_subbubbles">
+                        <div class="sub-bubble" id="subbubble4">
+                            <img src="logo\Startup.png" alt="Image">
+                            <span>Launch</span>
+                            <span>Your Project</span>
+                        </div>
+                        <div class="sub-bubble" id="subbubble5">
+                            <img src="logo\Sain.png" alt="Image">
+                            <span>Take Care</span>
+                        </div>
                     </div>
                 </div>
             </div>
