--- a/index_fr.html
+++ b/index_fr.html
@@ -11,6 +11,7 @@
 
 <body>
 	<div class="container" id="intro">
+		<div class="upper_part">
 		<div class="banner">
 			<div class="title">
 				EPFL Ressources durables
@@ -59,6 +60,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 		<div class="arrow" id="arrow">
 			<svg id="more-arrows">
