--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				</div>
 				<!-- Resource 8: association débouchés durables -->
 				<div class="bubble smaller" id="resource8">
-					<a href="https://debouches-durables.unipoly.ch/">
+					<a href="https://unipoly.ch/debouches-durables/">
 						<img src="logo\débouchés durables.png" alt="association débouchés durables">
 					</a>
 					<div class="text-description">
@@ -356,8 +356,28 @@
 						The association Amnesty HEL is dedicated to promoting the defense of human rights on Lausanne campuses by raising student awareness of socio-political and environmental issues. Its activities and actions are organized into five sections: Women's Rights, Environment, International Political News, LGBTQ+, and Asylum and Migration. Within these sections, a wide range of events and actions take place, including conferences, film screenings, workshops, and concrete initiatives. These concrete actions involve fighting against menstrual precariousness on campus, organizing sustainability rallies, setting up a podcast, and conducting waste collections. All of these activities are carried out in a caring and inclusive manner.
 					</div>
 				</div>
-				<!-- Resource 27: Castor Freegan -->
+				<!-- Resource 27: Apiculture -->
 				<div class="bubble smaller" id="resource27">
+					<a href="https://unipoly.ch/apiculture-english/">
+						<img src="logo\apiculture.png" alt="Apiculture">
+					</a>
+					<div class="text-description">
+						<h3>Apiculture</h3>
+						The goal of the Apiculture project is to raise awareness among students and staff on campus about the issue of bee colony collapse disorder and to become familiar with beekeeping. To do this, the project has its own apiary composed of about 5 hives located on the Bassenges farm estate since early 2017 allowing us to learn about beekeeping and produce honey when the bees have decided to do so.
+					</div>
+				</div>
+				<!-- Resource 28: Jardins - Campus farmers -->
+				<div class="bubble smaller" id="resource28">
+					<a href="https://unipoly.ch/jardins-campus-farmers/">
+						<img src="logo\jardin_campus_farmers2.png" alt="Jardins - Campus farmers">
+					</a>
+					<div class="text-description">
+						<h3>Jardins - Campus farmers</h3>
+						This project aims to allow students to grow vegetables on their campus in an organic way. Of course it is a learning ground for gardening, but it is also a place where one (re)discovers a relationship with the earth and nature as well as a place for exchange with other students.
+					</div>
+				</div>
+				<!-- Resource 29: Castor Freegan -->
+				<div class="bubble smaller" id="resource29">
 					<a href="https://www.epfl.ch/campus/restaurants-shops-hotels/fr/le-castor-freegan/">
 						<img src="logo\Le_castor_logo.png" alt="Castor Freegan">
 					</a>
@@ -366,8 +386,8 @@
 						The participatory project "Le castor Freegan" transforms unsold fruit and vegetables collected on the same day into a free-price dinner at the Rolex Learning Center. It's a student-run cafeteria designed to get students involved in joint projects. You can come and eat that evening, but you can also help to cook, serve or collect unsold produce.
 					</div>
 				</div>
-				<!-- Resource 28: Association des étudiant·es végan·es et animalistes -->
-				<div class="bubble smaller" id="resource28">
+				<!-- Resource 30: Association des étudiant·es végan·es et animalistes -->
+				<div class="bubble smaller" id="resource30">
 					<a href="https://unipoly.ch/eva/">
 						<img src="logo\EVA.png" alt="Association des étudiant·es végan·es et animalistes">
 					</a>
@@ -376,8 +396,8 @@
 						EVA is Unipoly's hub representing vegan students and animal rights supporters. It encourages an ethical and animal-friendly lifestyle, and offers the possibility to feed and live as independently as possible from animal exploitation by significantly increasing the vegan offer in the catering places of university campuses. The EVA also wishes to bring together vegan students and people interested in veganism and animalism in a community focused on discussion and offer support and advice to students and collaborators wishing to adopt a vegan lifestyle.
 					</div>
 				</div>
-				<!-- Resource 29: Drag Lab -->
-				<div class="bubble smaller" id="resource29">
+				<!-- Resource 31: Drag Lab -->
+				<div class="bubble smaller" id="resource31">
 					<a href="https://www.epfl.ch/campus/associations/list/asar/drag-lab/">
 						<img src="logo\drag_lab.png" alt="Drag Lab">
 					</a>
@@ -386,8 +406,8 @@
 						People studying, teaching or working at EPFL promoting parity and diversity in the architecture school through readings and discussions.
 					</div>
 				</div>
-				<!-- Resource 30: PlanQueer -->
-				<div class="bubble smaller" id="resource30">
+				<!-- Resource 32: PlanQueer -->
+				<div class="bubble smaller" id="resource32">
 					<a href="https://www.epfl.ch/campus/associations/list/planqueer/">
 						<img src="logo\planqueer.png" alt="PlanQueer">
 					</a>
@@ -404,8 +424,8 @@
 				<img src="logo\Startup.png" alt="Image">
 				<span>Launch Your Project</span>
 				<div class="border" id="border4"></div>
-				<!-- Resource 31: EPFL Changemakers -->
-				<div class="bubble smaller" id="resource31">
+				<!-- Resource 33: EPFL Changemakers -->
+				<div class="bubble smaller" id="resource33">
 					<a href="https://www.epfl.ch/innovation/students-innovation-lab/epfl-changemakers/">
 						<img src="logo\Changemakers_Logo.png" alt="EPFL Changemakers">
 					</a>
@@ -414,8 +434,8 @@
 						A 12-week program for students ready to embark on a great learning journey, boost their innovation and entrepreneurial skills, reflect on their impact, and turn their idea into real-life project.
 					</div>
 				</div>
-				<!-- Resource 32: Durabilis -->
-				<div class="bubble smaller" id="resource32">
+				<!-- Resource 34: Durabilis -->
+				<div class="bubble smaller" id="resource34">
 					<a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/durabilis-award/">
 						<img src="logo\durabilis.jpg" alt="Durabilis">
 					</a>
@@ -424,8 +444,8 @@
 						The Durabilis Award, introduced in March 2007, is given to student projects that explore issues related to sustainability. The competition is open to all Bachelor’s and Master’s students at EPFL and UNIL. Candidates must have obtained a minimum grade of 5 out of 6 to compete, and both individual and group projects are accepted. The Durabilis Award is supported by EPFL’s Vice Presidency for Responsible Transformation and by the Rectorate of the University of Lausanne.
 					</div>
 				</div>
-				<!-- Resource 33: Make -->
-				<div class="bubble smaller" id="resource33">
+				<!-- Resource 35: Make -->
+				<div class="bubble smaller" id="resource35">
 					<a href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
 						<img src="logo\EPFL Make.png" alt="Make">
 					</a>
@@ -434,9 +454,9 @@
 						The MAKE initiative makes it possible to integrate interdisciplinarity, project-based learning, experimentation and prototyping into students’ curricula. The initiative provides teachers with Discovery Learning Labs (DLLs). Spaces including state-of-the-art equipment to offer practical work directly related to research or the industrial environment. Finally, the initiative also provides students (bachelor and master) with a professional consulting service and prototyping spaces to support them in the realization of their open projects.
 					</div>
 				</div>
-				<!-- Resource 34: RebuiLT -->
-				<div class="bubble smaller" id="resource34">
-					<a href="https://make.epfl.ch/projects/rebuilt">
+				<!-- Resource 36: RebuiLT -->
+				<div class="bubble smaller" id="resource36">
+					<a href="https://rebuilt.cargo.site/">
 						<img src="logo\rebuilt.png" alt="RebuiLT">
 					</a>
 					<div class="text-description">
@@ -444,8 +464,8 @@
 						RebuiLT is the name of the student project launched by the Low Tech Lab Lausanne in February 2022. It is the result of a reflection on the integration of Low Tech solutions in urban environments and the desire of students in the association to incorporate Low Tech into their curricula. Its ultimate goal is to construct a Low Tech community pavilion using reused building materials to demonstrate that environmentally sustainable construction methods exist and that a sustainable and desirable future is possible by meeting the needs of residents through Low Tech solutions.
 					</div>
 				</div>
-				<!-- Resource 35: Low Tech Lab -->
-				<div class="bubble smaller" id="resource35">
+				<!-- Resource 37: Low Tech Lab -->
+				<div class="bubble smaller" id="resource37">
 					<a href="https://lowtechlab.unipoly.ch/">
 						<img src="logo\low_tech_lab.png" alt="Low Tech Lab">
 					</a>
@@ -454,8 +474,8 @@
 						What if we imagined more sustainable and locally-based technologies? We could choose to use simpler technologies that don't circumnavigate the planet several times before reaching us. This is the vision of technology advocated by the low-tech movement, as opposed to high-tech. These technologies adhere to three key principles in their design: usefulness, accessibility, and sustainability. The Low-tech Lab Lausanne aims to develop the low-tech approach within the EPFL campus and in the Lausanne region, as well as to support projects that embody a technically sustainable and desirable society.
 					</div>
 				</div>
-				<!-- Resource 36: Skil -->
-				<div class="bubble smaller" id="resource36">
+				<!-- Resource 38: Skil -->
+				<div class="bubble smaller" id="resource38">
 					<a href="https://www.epfl.ch/labs/skil/en/about/">
 						<img src="logo\SKIL_logo.png" alt="Skil">
 					</a>
@@ -470,8 +490,8 @@
 				<img src="logo\Sain.png" alt="Image">
 				<span>Take Care</span>
 				<div class="border" id="border5"></div>
-				<!-- Resource 37: Sports Universitaires Lausanne -->
-				<div class="bubble smaller" id="resource37">
+				<!-- Resource 39: Sports Universitaires Lausanne -->
+				<div class="bubble smaller" id="resource39">
 					<a href="https://sport.unil.ch/">
 						<img src="logo\logo-centresports.png" alt="Sports Universitaires Lausanne">
 					</a>
@@ -480,8 +500,8 @@
 						The Lausanne University Sports (SUL) offer a variety of physical activities and sports to members of the University and the Swiss Federal Institute of Technology in Lausanne (EPFL) community in the fantastic setting of the University Sports Center at Dorigny.
 					</div>
 				</div>
-				<!-- Resource 38: Espace-Transitions -->
-				<div class="bubble smaller" id="resource38">
+				<!-- Resource 40: Espace-Transitions -->
+				<div class="bubble smaller" id="resource40">
 					<a href="https://www.unil.ch/espace-transitions/fr/home.html">
 						<img src="logo\logo ET Rond.png" alt="Espace-Transitions">
 					</a>
@@ -490,44 +510,24 @@
 						The Espace Transitions is a project established to welcome reflections and feelings on sustainability issues, and subsequently, to offer support in taking action to help you find a project that suits you and/or provide you with tools to realize your own. To this end, the team will be present to welcome you for a meal and discussion every Thursday from 12:15 PM to 1:45 PM at the Transitions Space.
 					</div>
 				</div>
-				<!-- Resource 39: Trust and Support Network (TSN) -->
-				<div class="bubble smaller" id="resource39">
+				<!-- Resource 41: Trust and Support Network (TSN) -->
+				<div class="bubble smaller" id="resource41">
 					<a href="https://www.epfl.ch/campus/community/trust-and-support-network/">
 						<img src="logo\Trust-support-network-epfl.png" alt="Trust and Support Network (TSN)">
 					</a>
 					<div class="text-description">
 						<h3>Trust and Support Network (TSN)</h3>
-						The EPFL Trust and Support Network comprises among others the Student Affairs department, the Doctoral School, the Equal Opportunity Office, the Point Santé (Health Point), the Person of Trust and HR Managers. It brings together internal and external instances of EPFL with a mandate to provide initial assistance in situations of harassment, discrimination and other psychosocial risks.
+						L'espace transitions (ET) is a project of the UNIL Sustainability Center of Competence. It aims to support the development of emotional skills related to sustainability issues. For this, several activities are offered - conferences and workshops, as well as free moments of sharing. The team also responds to the needs of the campus community on these issues, supports new projects and raises the profile of existing projects. The ET is located in room 046 of the Vortex building. The activities are relayed on the Instagram account @espace.transitions. You can also contact us at espace.transitions@unil.ch. Welcome!
 					</div>
 				</div>
-				<!-- Resource 40: Guided meditation -->
-				<div class="bubble smaller" id="resource40">
+				<!-- Resource 42: Guided meditation -->
+				<div class="bubble smaller" id="resource42">
 					<a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
 						<img src="logo\meditation.png" alt="Guided meditation">
 					</a>
 					<div class="text-description">
 						<h3>Guided meditation</h3>
 						Come and sit down, away from what scatters and hustle you, and reconnect with yourself. Come and take the time to close your eyes and appreciate the only moment we have the opportunity to live: the present one. The guided meditation times are intended to be humanistic, that is, open to the entire university community, regardless of the spiritual tradition of the participant. During 10-15′, indications are given (in French and English) then during the remaining 15-20′, it is complete silence.
-					</div>
-				</div>
-				<!-- Resource 41: Apiculture -->
-				<div class="bubble smaller" id="resource41">
-					<a href="https://unipoly.ch/apiculture-english/">
-						<img src="logo\apiculture.png" alt="Apiculture">
-					</a>
-					<div class="text-description">
-						<h3>Apiculture</h3>
-						The goal of the Apiculture project is to raise awareness among students and staff on campus about the issue of bee colony collapse disorder and to become familiar with beekeeping. To do this, the project has its own apiary composed of about 5 hives located on the Bassenges farm estate since early 2017 allowing us to learn about beekeeping and produce honey when the bees have decided to do so.
-					</div>
-				</div>
-				<!-- Resource 42: Jardins - Campus farmers -->
-				<div class="bubble smaller" id="resource42">
-					<a href="https://unipoly.ch/jardins-campus-farmers/">
-						<img src="logo\jardin_campus_farmers2.png" alt="Jardins - Campus farmers">
-					</a>
-					<div class="text-description">
-						<h3>Jardins - Campus farmers</h3>
-						This project aims to allow students to grow vegetables on their campus in an organic way. Of course it is a learning ground for gardening, but it is also a place where one (re)discovers a relationship with the earth and nature as well as a place for exchange with other students.
 					</div>
 				</div>
 				<!-- Resource 43: Forêt de Dorigny -->
